<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="1"
    >
    <RelativeLayout
        android:layout_width="420dp"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_rowSpan="1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/sessionTextView"
            android:text="@string/sessionTextView"
            android:gravity="center"
            android:background="@color/headers"
            android:layout_alignParentTop="true"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/sessionInfoLayout"
            android:layout_below="@+id/sessionTextView"

            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    />

            </TableRow>


        </TableLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/sessionInfoLayout"
            android:layout_alignParentBottom="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:id="@+id/sessionInfoTextView"
                android:text="@string/sessionInfoTextView"
                android:gravity="center"
                android:background="@color/headers"
                />
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:id="@+id/sessionLabel"
                android:orientation="vertical"
                android:layout_below="@+id/sessionInfoTextView"
                android:layout_alignParentStart="true"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:id="@+id/sessionIdLabelTextView"
                    android:text="@string/sessionIdLabelTextView"
                    android:gravity="left|center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:id="@+id/sessionDateLabelTextView"
                    android:text="@string/sessionDateLabelTextView"
                    android:gravity="left|center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:id="@+id/sessionLocationLabelTextView"
                    android:text="@string/sessionLocationLabelTextView"
                    android:gravity="left|center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:id="@+id/patientLabelTextView"
                    android:text="@string/patientIdLabelTextView"
                    android:gravity="left|center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="110dp"
                android:id="@+id/sessionDisplayTextView"
                android:orientation="vertical"
                android:layout_below="@+id/sessionInfoTextView"
                android:layout_alignParentEnd="true"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:id="@+id/sessionIdTextView"
                    android:gravity="left|center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:id="@+id/sessionDateTextView"
                    android:gravity="left|center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:id="@+id/sessionLocationTextView"
                    android:gravity="left|center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:id="@+id/patientIdTextView"
                    android:gravity="left|center"
                    />
            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/visualLayout"
        android:layout_width="590dp"
        android:layout_height="match_parent"
        android:layout_column="1"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            >
            <Button
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:id="@+id/weightBearingTextView"
                android:text="@string/weightBearingText"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                />
            <Button
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:id="@+id/orientationTextView"
                android:text="@string/orientationText"
                android:gravity="center"
                android:layout_toEndOf="@+id/weightBearingTextView"
                />
            <Button
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:id="@+id/speedTextView"
                android:text="@string/SpeedText"
                android:gravity="center"
                android:layout_toEndOf="@+id/orientationTextView"
                />
            <Button
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:text="@string/predictionText"
                android:id="@+id/predictionTextView"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                />
        </LinearLayout>


        <org.florescu.android.rangeseekbar.RangeSeekBar
            android:layout_width="match_parent"
            android:layout_above="@+id/timerLayout"
            android:layout_height="wrap_content"
            rsb:absoluteMaxValue="86400"
            rsb:absoluteMinValue="0"
            rsb:textAboveThumbsColor="@android:color/holo_purple"
            rsb:thumbShadow="true"
            rsb:showLabels="false"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/timerLayout"
            android:layout_alignParentBottom="true"
            >
            <LinearLayout
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:id="@+id/windowColumn"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/windowLocationLabelTextView"
                    android:text="@string/windowLocationLabelTextView"
                    android:gravity="center"
                    android:background="@color/headers"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/startLabelTextView"
                    android:text="@string/startLabelTextView"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/endLabelTextView"
                    android:text="@string/endLabelTextView"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/windowColumn"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/timeLabelTextView"
                    android:text="@string/timeLabelTextView"
                    android:gravity="center"
                    android:background="@color/headers"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/startTextView"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/endTextView"
                    android:gravity="center"
                    />
            </LinearLayout>
        </RelativeLayout>




    </RelativeLayout>
</GridLayout>